# homelab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SECURITY_IMPROVEMENTS.md  docker-compose-secure.yml  docker-compose.access.yml  docker-compose.apps.yml  docker-compose.arr.yml  docker-compose.automation.yml  docker-compose.backup.yml  docker-compose.bak.yml  docker-compose.common.yml  docker-compose.communication.yml  docker-compose.core.yml  docker-compose.documents.yml  docker-compose.downloaders.yml  docker-compose.files.yml  docker-compose.local.example.yml  docker-compose.logging.yml  docker-compose.management.yml  docker-compose.media-extras.yml  docker-compose.media-servers.yml  docker-compose.media.yml  docker-compose.monitoring.yml  docker-compose.nettest.yml  docker-compose.ops.yml  docker-compose.photos.yml  docker-compose.productivity.yml  docker-compose.requests.yml  docker-compose.utilities.yml  docker-compose.yml  generate-secrets.sh  migrate-to-secure.sh  n8n.yml  n8n1.json
.claude/: .fuse_hidden0000272a000009ab  .fuse_hidden00002b9d000009ac  settings.local.json
docs/: backup.md  (+13 more)
scripts/: .coverage  CLAUDE.md  LICENSE  README.md  bootstrap-host.py  build-docmost-space.py  build-windows-package.sh  build_exe.py  erpnext-backup.sh  erpnext-init-site.sh  erpnext_auto_reconcile_sales.py  erpnext_import_party_contacts.py  erpnext_tally_cutover.py  erpnext_tally_full_history.py  erpnext_tally_overdue_review.py  erpnext_tally_party_followup.py  homarr_seed.py  init-env.py  nettest.py  nettest.spec  nettest.yml.example  pyproject.toml  setup-logging.sh  sync-monitoring-config.sh  tally_build_history_pack.py  tally_compute_balances.py  tally_cutover_from_xml_reports.py  tally_to_erpnext.py  validate-stack.py
scripts/.claude/: settings.local.json
scripts/.github/workflows/: ci.yml  publish.yml
scripts/docs/: quickstart-docker.md  quickstart-linux.md  quickstart-macos.md  quickstart-windows.md
scripts/docs/plans/: 2026-02-02-video-services-implementation.md  2026-02-02-video-services-testing-design.md
scripts/nettest/: README.md  __init__.py  cli.py  config.py  diagnostics.py  exceptions.py  models.py  run-windows.bat  run-windows.ps1
scripts/nettest-windows-package/: CLICK_ME_TO_TEST.bat  README.txt
scripts/nettest-windows-package/nettest/: Dockerfile  __main__.py  cli.py  config.py  diagnostics.py  models.py  requirements.txt
scripts/nettest-windows-package/nettest/alerts/: thresholds.py
scripts/nettest-windows-package/nettest/output/: __init__.py  csv_export.py  evidence.py  html.py  json_output.py  prometheus.py  terminal.py
scripts/nettest-windows-package/nettest/tests/: __init__.py  mtr.py  tcp.py
scripts/nettest-windows-package/nettest/tui/: interactive.py  wizard.py
scripts/nettest-windows-package/nettest/utils/: __init__.py  history.py  logging.py  network.py
scripts/nettest-windows-package/output/: README.txt
scripts/nettest/alerts/: __init__.py  notifications.py
scripts/nettest/api/: __init__.py  server.py
scripts/nettest/cli/: __init__.py  handlers.py  output.py  parser.py
scripts/nettest/output/: __init__.py  html.py  json_output.py  terminal.py
scripts/nettest/output/templates/: report.html  styles.css
scripts/nettest/tests/: __init__.py  bufferbloat.py  dns.py  http.py  mtr.py  ping.py  runner.py  speedtest.py  stability.py  tcp.py  video_services.py
scripts/nettest/tui/: __init__.py  interactive.py  monitor.py  wizard.py
scripts/nettest/utils/: __init__.py  commands.py  storage.py
scripts/tests/: conftest.py  test_config.py  test_models.py  test_ping.py  test_stability.py
(+69 files in other folders)
